error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/./src/app.py", line 1
    print("Hello, World!"
         ^
SyntaxError: '(' was never closed
